# hardcorefrontfix

backend/: agent.py  editmatch.py  llm.py  main.py  package-lock.json  pyproject.toml  rag_service.py  solver.py  tools.py
emulator-service/: go.mod  go.sum  index.html  logs.json  main.go  readme.md
emulator-service/Blinky/: README.md  platformio.ini
emulator-service/Blinky/src/: main.c
emulator-service/PlatformIO/: platformio.go  platformio_test.go
emulator-service/QEMU/: qemu.go
emulator-service/cmd/dashboard/: dashboard.go
emulator-service/cmd/livectx/: main.go
emulator-service/cmd/testcontext/: main.go
emulator-service/debug/: alerts.go  analytics.go  backtrace.go  breakpoint_manager.go  breakpoints.go  cleanup.go  combined_filter.go  cpu_state.go  debugger.go  dedupe.go  event.go  event_stream.go  fault_decoder.go  filter.go  gdb_debugger.go  gdb_mi.go  gdbprocess.go  hardware_parser.go  livefault.go  logger.go  memory.go  openocd.go  peripheral.go  processors.go  register_parser.go  renderer.go  replay.go  reset.go  runtime_context.go  serial_reader.go  stackdump.go  stats.go  storage.go  symbol_resolver.go  tracker.go  type_filter.go
emulator-service/logs/: session_20260515_142340.json  session_20260515_142354.json  session_20260515_143045.json  session_20260515_144830.json  session_20260515_164440.json  session_20260515_164940.json  session_20260515_165235.json  session_20260515_165402.json  session_20260515_165546.json  session_20260515_165738.json  session_20260515_170021.json  session_20260515_170315.json
frontend/src/: App.css  App.svelte
(+8 files in other folders)
