[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "python-multipart>=0.0.29",
]
